@@ -1,5 +1,6 @@
 v1.0.6
 - Add option to stop the screensaver after a set amount of time
+- Give time for other programs to stop before starting screensaver
 
 v1.0.5
 - Handle error if screensaver video not set
